<resources>
  <string name="app_name">RubyGems</string>
  <string name="updates">Updates</string>
  <string name="new_gems">New</string>
  <string name="profile">Profile</string>
  <string name="downloads">Downloads</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="name_optional">Name (Optional)</string>
  <string name="login">Login</string>
  <string name="search">Search</string>
  <string name="total_downloads">Total Downloads</string>
  <string name="total_gems">Total Gems</string>
  <string name="for_this_version">For This Version</string>
  <string name="runtime_dependencies">RUNTIME DEPENDENCIES (%s)</string>
  <string name="development_dependencies">DEVELOPMENT DEPENDENCIES (%s)</string>
  <string name="authors">AUTHORS</string>
  <string name="license">LICENSE</string>
  <string name="loading">Loading…</string>
  <string name="not_available">N/A</string>
  <string name="info">INFO</string>
  <string name="generic_error_msg">Something bad happened!</string>
  <string name="retry">Retry</string>
  <string name="logout">LOGOUT</string>
  <string name="share_dialog_message">Share gem using</string>
  <string name="copied_gem_details_msg">Copied gem details to clipboard!</string>
  <string name="help_and_feedback">Help &amp; Feedback</string>
  <string name="help_and_feedback_text">Hello Rubyist,\n\nI hope you are liking the RubyGems app.\n\nPlease help us spread the word so that ruby community can benefit from the app. Also please provide your valuable feedback on the website and play store to make this app better.\n\nIf you are a Android developer, you can also contribute to this app on Github
    \n\nFor feedback and more details about the app, kindly visit our website.
  </string>
  <string name="github">Github</string>
  <string name="my_website">Website</string>
  <string name="a_note_from_developer">A note from developer</string>
  <string name="website_url">http://www.singhajit.com/ruby-gems-android-app/</string>
  <string name="github_url">https://github.com/ajitsing/RubyGemsAndroidApp</string>
  <string name="email_and_password_is_required">* Email and Password is required</string>
</resources>
