<layout
  xmlns:android="http://schemas.android.com/apk/res/android">

  <data>

    <variable
      name="presenter"
      type="com.singhajit.rubygems.profile.presenter.LoginPresenter"/>

    <variable
      name="loginViewModel"
      type="com.singhajit.rubygems.profile.viewmodel.LoginViewModel"/>
  </data>

  <android.support.v7.widget.CardView
    style="@style/GemCardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:visibility="@{loginViewModel.loginFormVisibility.visibility}">

    <LinearLayout
      android:id="@+id/login_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/email_and_password_is_required"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:visibility="@{loginViewModel.requiredFieldsWarningVisibility.visibility}"/>

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
          android:id="@+id/name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/name_optional"
          android:imeActionId="@+id/login"
          android:imeOptions="actionNext"
          android:inputType="textPersonName"
          android:maxLines="1"
          android:singleLine="true"
          android:text="@={loginViewModel.name}"/>

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
          android:id="@+id/email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/email"
          android:imeOptions="actionNext"
          android:inputType="textEmailAddress"
          android:maxLines="1"
          android:singleLine="true"
          android:text="@={loginViewModel.username}"/>

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/password"
          android:imeActionId="@+id/login"
          android:imeOptions="actionDone"
          android:inputType="textPassword"
          android:maxLines="1"
          android:singleLine="true"
          android:text="@={loginViewModel.password}"/>

      </android.support.design.widget.TextInputLayout>

      <Button
        android:id="@+id/login_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:onClick="@{() -> presenter.login(loginViewModel)}"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    </LinearLayout>
  </android.support.v7.widget.CardView>
</layout>