<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

  <data class="HelpAndFeedbackBinding"/>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

      <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
      </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <android.support.v7.widget.CardView
        style="@style/GemCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:layout_marginStart="10dp"
          android:layout_marginTop="5dp"
          android:orientation="vertical">

          <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/a_note_from_developer"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"/>

          <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

          <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/help_and_feedback_text"
            android:textColor="@color/cardview_dark_background"/>

          <android.support.v7.widget.CardView
            style="@style/GemCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="2dp"
            app:cardElevation="2dp"

            app:contentPaddingBottom="5dp">

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

              <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_code_black_36dp"/>

              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/github"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="end">

              <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_home_black_36dp"/>

              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="6dp"
                android:text="@string/my_website"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>
            </LinearLayout>
          </android.support.v7.widget.CardView>
        </LinearLayout>
      </android.support.v7.widget.CardView>
    </ScrollView>
  </LinearLayout>
</layout>